--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Well shaken</h1>
+    <h1>Pets</h1>
     <div id="pet-names"></div>
-    <script src="main.js"></script>
+    <div id="petCard">
+    </div>
+    <!--<script src="main.js"></script>-->
+    <script src="functions.js"></script>
 </body>
 </html>
